<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LayoutExercise">

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="158dp"
        android:layout_height="33dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/iglogo" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView3"
        android:layout_width="413dp"
        android:layout_height="86dp"
        android:layout_marginTop="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView12">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView27"
                    android:layout_width="91dp"
                    android:layout_height="59dp"
                    app:srcCompat="@drawable/zed1" />

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/zed"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView26"
                    android:layout_width="91dp"
                    android:layout_height="59dp"
                    app:srcCompat="@drawable/zak1" />

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/zak"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView24"
                    android:layout_width="91dp"
                    android:layout_height="59dp"
                    app:srcCompat="@drawable/zak" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="match_parent"
                    android:layout_height="14dp"
                    android:text="@string/me1"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView22"
                    android:layout_width="91dp"
                    android:layout_height="59dp"
                    app:srcCompat="@drawable/me" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/me"
                    android:textSize="10sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView21"
                android:layout_width="91dp"
                android:layout_height="59dp"
                app:srcCompat="@drawable/kc" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/kc"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView20"
                    android:layout_width="91dp"
                    android:layout_height="59dp"
                    app:srcCompat="@drawable/laine" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/laine"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView16"
                    android:layout_width="91dp"
                    android:layout_height="59dp"
                    app:srcCompat="@drawable/tristan" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tristan"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView15"
                    android:layout_width="91dp"
                    android:layout_height="59dp"
                    app:srcCompat="@drawable/zed" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/zed1"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView14"
                    android:layout_width="91dp"
                    android:layout_height="59dp"
                    app:srcCompat="@drawable/wewe" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="78dp"
                    android:layout_height="14dp"
                    android:text="@string/me"
                    android:textSize="10sp" />
            </LinearLayout>

        </LinearLayout>
    </HorizontalScrollView>

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="600dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical">

                                <ImageView
                                    android:id="@+id/imageView"
                                    android:layout_width="match_parent"
                                    android:layout_height="197dp"
                                    android:textAlignment="center"
                                    app:srcCompat="@drawable/_14695423_3523332527938730_8953338405953403123_n" />

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:orientation="horizontal">

                                    <Button
                                        android:id="@+id/button3"
                                        android:layout_width="141dp"
                                        android:layout_height="wrap_content"
                                        android:text="@string/like" />

                                    <Button
                                        android:id="@+id/button"
                                        android:layout_width="wrap_content"
                                        android:layout_height="match_parent"
                                        android:text="@string/comm" />

                                    <Button
                                        android:id="@+id/button4"
                                        android:layout_width="158dp"
                                        android:layout_height="match_parent"
                                        android:text="@string/share" />
                                </LinearLayout>
                            </LinearLayout>

                            <ImageView
                                android:id="@+id/imageView"
                                android:layout_width="match_parent"
                                android:layout_height="197dp"
                                android:textAlignment="center"
                                app:srcCompat="@drawable/kc" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="horizontal">

                                <Button
                                    android:id="@+id/button3"
                                    android:layout_width="141dp"
                                    android:layout_height="wrap_content"
                                    android:text="@string/like" />

                                <Button
                                    android:id="@+id/button"
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:text="@string/comm" />

                                <Button
                                    android:id="@+id/button4"
                                    android:layout_width="158dp"
                                    android:layout_height="match_parent"
                                    android:text="@string/share" />
                            </LinearLayout>
                        </LinearLayout>

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="match_parent"
                            android:layout_height="197dp"
                            android:textAlignment="center"
                            app:srcCompat="@drawable/tristan" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <Button
                                android:id="@+id/button3"
                                android:layout_width="141dp"
                                android:layout_height="wrap_content"
                                android:text="@string/like" />

                            <Button
                                android:id="@+id/button"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:text="@string/comm" />

                            <Button
                                android:id="@+id/button4"
                                android:layout_width="158dp"
                                android:layout_height="match_parent"
                                android:text="@string/share" />
                        </LinearLayout>
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="match_parent"
                        android:layout_height="197dp"
                        android:textAlignment="center"
                        app:srcCompat="@drawable/zak" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/button3"
                            android:layout_width="141dp"
                            android:layout_height="wrap_content"
                            android:text="@string/like" />

                        <Button
                            android:id="@+id/button"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/comm" />

                        <Button
                            android:id="@+id/button4"
                            android:layout_width="158dp"
                            android:layout_height="match_parent"
                            android:text="@string/share" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>